--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -57,4 +57,4 @@ jobs:
         run: poetry install --no-interaction --no-root
 
       - name: Run tests
-        run: make test
+        run: poetry run pytest -v .
