--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ sqlalchemy = "^2.0.30"
 uvicorn = "^0.29.0"
 flake8 = "^7.0.0"
 psycopg2 = "^2.9.9"
+python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 
 
 [tool.poetry.group.dev.dependencies]
