--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -12,7 +12,7 @@ on:
 env:
   DB_NAME: db
   DB_USER: user
-  DB_PASSWORD: postgres
+  DB_PASS: postgres
   DB_HOST: localhost
   DB_PORT: 5432
 
@@ -26,7 +26,7 @@ jobs:
         env:
           POSTGRES_DB: ${{ env.DB_NAME }}
           POSTGRES_USER: ${{ env.DB_USER }}
-          POSTGRES_PASSWORD: ${{ env.DB_PASSWORD }}
+          POSTGRES_PASSWORD: ${{ env.DB_PASS }}
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
