--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ fastapi = "^0.111.0"
 sqlalchemy = "^2.0.30"
 uvicorn = "^0.29.0"
 flake8 = "^7.0.0"
-psycopg2 = "^2.9.9"
+psycopg2-binary = "^2.9.9"
 python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 sib-api-v3-sdk = "^7.6.0"
 
